--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=backend
+# Database connection properties. The default values should work with the docker-compose file provided in the repository
+# If you want to change this, make sure to also update the docker-compose file accordingly
+app.database.name=starter-kit-db
+app.database.username=root
+app.database.password=password
+app.database.host=localhost
+app.database.port=3306
+
+# spring provided properties
+spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=${app.database.username}
+spring.datasource.password=${app.database.password}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
