--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ app.database.password=password
 app.database.host=localhost
 app.database.port=3306
 
+app.allowed-origins=http://localhost
+
 # spring provided properties
 spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -15,3 +17,11 @@ spring.datasource.password=${app.database.password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Some common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
+logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=TRACE
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
