--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ app.database.password=password
 app.database.host=localhost
 app.database.port=3306
 
+app.application-name=starter-kit
+app.base-url=http://localhost:8080
 app.allowed-origins=http://localhost
 
 # spring provided properties
@@ -18,8 +20,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-# Some common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
-logging.level.org.springframework.security=DEBUG
+org.jobrunr.background-job-server.enabled=true
+org.jobrunr.dashboard.enabled=true
+
+# SMPT host, this is localhost for development, it should work with your mailpit docker container.
+# You can open mailpit ui on http://localhost:8025 to see all emails sent from your application in development
+# You will use the host from the provider of your choice in production
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=user
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
+#logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=TRACE
 #logging.level.org.hibernate.type.descriptor.sql=trace
