--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,7 @@ app.database.port=3306
 app.application-name=starter-kit
 app.base-url=http://localhost:8080
 app.allowed-origins=http://localhost
+app.login-page-url=${app.base-url}/auth/login
 
 # spring provided properties
 spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
@@ -34,7 +35,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=TRACE
 #logging.level.org.hibernate.type.descriptor.sql=trace
