--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,6 +12,14 @@ app.base-url=http://localhost:8080
 app.allowed-origins=http://localhost
 app.login-page-url=${app.base-url}/auth/login
 
+app.s3.bucket-name=spring-boot-nextjs-starter
+app.s3.access-key=6LJ5ViNkGYpHkAw9
+app.s3.secret-key=RarfgD6Iq0HgoeyQgYayXMAztQvVtSGsudFFJr7Z
+# I recommend using tebi.io, but you can use any s3 provider you want
+app.s3.base-url=http://s3.tebi.io
+app.s3.region=europe-central-1
+app.s3.storage-class=STANDARD
+
 # spring provided properties
 spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -33,6 +41,8 @@ spring.mail.username=user
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.port=8081
 
 #common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
 logging.level.org.springframework.security=DEBUG
