--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ app.application-name=starter-kit
 app.base-url=http://localhost:8080
 app.allowed-origins=http://localhost
 app.login-page-url=${app.base-url}/auth/login
+app.login-success-url=${app.base-url}/auth/login-success
 
 app.s3.bucket-name=spring-boot-nextjs-starter
 app.s3.access-key=6LJ5ViNkGYpHkAw9
@@ -19,6 +20,14 @@ app.s3.secret-key=RarfgD6Iq0HgoeyQgYayXMAztQvVtSGsudFFJr7Z
 app.s3.base-url=http://s3.tebi.io
 app.s3.region=europe-central-1
 app.s3.storage-class=STANDARD
+
+# Github OAuth2
+spring.security.oauth2.client.registration.github.client-id=Ov23ligr9YC7IPOT3qvX
+spring.security.oauth2.client.registration.github.client-secret=e18a6099a9535855ab18849f4ab2bb4929626de5
+
+# Google
+spring.security.oauth2.client.registration.google.client-id=2121212
+spring.security.oauth2.client.registration.google.client-secret=2121212
 
 # spring provided properties
 spring.datasource.url=jdbc:mysql://${app.database.host}:${app.database.port}/${app.database.name}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=FALSE
