Admin users page

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,9 @@ app.s3.base-url=http://s3.tebi.io
 app.s3.region=europe-central-1
 app.s3.storage-class=STANDARD
 
+app.admin-user-email=admin@email.com
+app.admin-user-password=Password123
+
 # Github OAuth2
 spring.security.oauth2.client.registration.github.client-id=Ov23ligr9YC7IPOT3qvX
 spring.security.oauth2.client.registration.github.client-secret=e18a6099a9535855ab18849f4ab2bb4929626de5
