switch from shadcn to mantine + add automatic typescript types from backend sources

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ app.database.port=3306
 
 app.application-name=starter-kit
 app.base-url=http://localhost:8080
-app.allowed-origins=http://localhost
+app.allowed-origins=http://localhost:3000
 app.login-page-url=${app.base-url}/auth/login
 app.login-success-url=${app.base-url}/auth/login-success
 
@@ -54,7 +54,7 @@ spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-server.port=8081
+server.port=8080
 
 #common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
 logging.level.org.springframework.security=DEBUG
