--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,38 +6,62 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "copy-types": "copyfiles -f ../backend/target/typescript-generator/backend.ts ./models/",
+    "generate-types": "cd ../backend && mvnw.cmd compile && mvnw.cmd typescript-generator:generate",
+    "update-types": "npm run generate-types && npm run copy-types",
     "lint": "next lint"
   },
   "dependencies": {
+    "@devoss/tailwind-plugin-mantine": "^2.1.0",
     "@hookform/resolvers": "^3.6.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@mantine/carousel": "^7.15.1",
+    "@mantine/charts": "^7.15.1",
+    "@mantine/code-highlight": "^7.15.1",
+    "@mantine/core": "^7.15.1",
+    "@mantine/dates": "^7.15.1",
+    "@mantine/dropzone": "^7.15.1",
+    "@mantine/form": "^7.15.1",
+    "@mantine/hooks": "^7.15.1",
+    "@mantine/modals": "^7.15.1",
+    "@mantine/notifications": "^7.15.1",
+    "@mantine/nprogress": "^7.15.1",
+    "@mantine/spotlight": "^7.15.1",
+    "@mantine/tiptap": "^7.15.1",
+    "@tiptap/extension-link": "^2.10.4",
+    "@tiptap/pm": "^2.10.4",
+    "@tiptap/react": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^7.1.0",
     "lucide-react": "^0.395.0",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "recharts": "^2.15.0",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
+    "copyfiles": "^2.4.1",
+    "openapi-typescript": "^7.4.4",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
