--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+!**/src/main/**/src/main/resources/application-dev.properties
+
 ### STS ###
 .apt_generated
 .classpath
