--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,9 @@ app.database.username=root
 app.database.password=password
 app.database.host=localhost
 app.database.port=3306
+app.vapid-public-key=
+app.vapid-private-key=
+app.vapid-subject=mailto:email@example.com
 
 app.application-name=starter-kit
 app.base-url=http://localhost:8080
@@ -23,6 +26,8 @@ app.s3.storage-class=STANDARD
 
 app.admin-user-email=admin@email.com
 app.admin-user-password=Password123
+
+spring.profiles.active=dev
 
 # Github OAuth2
 spring.security.oauth2.client.registration.github.client-id=Ov23ligr9YC7IPOT3qvX
@@ -57,7 +62,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 server.port=8080
 
 #common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.web=INFO
 #logging.level.org.hibernate=TRACE
 #logging.level.org.hibernate.type.descriptor.sql=trace
