--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,6 +58,18 @@
       <artifactId>s3</artifactId>
       <version>2.24.9</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/nl.martijndwars/web-push -->
+    <dependency>
+      <groupId>nl.martijndwars</groupId>
+      <artifactId>web-push</artifactId>
+      <version>5.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.70</version>
+    </dependency>
+
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
