--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/serviceworker": "^0.0.107",
     "copyfiles": "^2.4.1",
     "openapi-typescript": "^7.4.4",
     "postcss": "^8.4.49",
