#10 | Hendi Santika | feat: Add Docker Compose Support🫸🌀✏️📗🐧🐳⬆🫸🌀✏️📗🐧🐳⬆

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=backend
 # Database connection properties. The default values should work with the docker-compose file provided in the repository
 # If you want to change this, make sure to also update the docker-compose file accordingly
 app.database.name=starter-kit-db
-app.database.username=root
-app.database.password=password
+app.database.username=yu71
+app.database.password=53cret
 app.database.host=localhost
 app.database.port=3306
 app.vapid-public-key=
@@ -68,3 +68,7 @@ server.port=8080
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
+# spring boot docker compose support
+spring.docker.compose.enabled=true
+spring.docker.compose.project-name=starter-kit
+spring.docker.compose.file=backend/compose.yml
