fix wrong schema used for callback url by spring security when issuing oauth2 request

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -60,6 +60,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.port=8080
+server.forward-headers-strategy=FRAMEWORK
 
 #common logging levels that you might want to use in development, just uncomment the ones you want to use and set the level you want
 #logging.level.org.springframework.security=DEBUG
