disable spring docker compose by default

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -70,6 +70,6 @@ server.forward-headers-strategy=FRAMEWORK
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 # spring boot docker compose support
-spring.docker.compose.enabled=true
+spring.docker.compose.enabled=false
 spring.docker.compose.project-name=starter-kit
 spring.docker.compose.file=backend/compose.yml
